# STM32F070-blank-template

./: .gitignore  CMakeLists.txt  README.md  STM32F070F6PX_FLASH.ld
Inc/: blink.h  gpio.h  main.h  systick.h
Src/: blink.c  gpio.c  main.c  systick.c
cmake/: arm-gcc-toolchain.cmake
